Client: We now send actions using C#

--- a/client/Client.csproj
+++ b/client/Client.csproj
@@ -2,4 +2,10 @@
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <Folder Include="scripts\global\receive" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="scripts\global\action_sender.gd" />
+  </ItemGroup>
 </Project>
