--- a/client/Client.csproj
+++ b/client/Client.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Godot.NET.Sdk/3.2.3">
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Content Include="scripts\global\action_sender.gd" />
