--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 resources/** filter=lfs diff=lfs merge=lfs -text
 executables/** filter=lfs diff=lfs merge=lfs -text
+assets/** filter=lfs diff=lfs merge=lfs -text
